功能：升级模型设计器与 S3 存储
